[gd_scene load_steps=52 format=2]

[ext_resource path="res://assets/ForegroundMasks/pokemon_2.png" type="Texture" id=1]
[ext_resource path="res://assets/ForegroundMasks/pokemon_3.png" type="Texture" id=2]
[ext_resource path="res://assets/ForegroundMasks/celtic_5.png" type="Texture" id=3]
[ext_resource path="res://assets/ForegroundMasks/hexagon.png" type="Texture" id=4]
[ext_resource path="res://assets/ForegroundMasks/pokemon_1.png" type="Texture" id=5]
[ext_resource path="res://assets/ForegroundMasks/unbrellacouple.png" type="Texture" id=6]
[ext_resource path="res://assets/ForegroundMasks/celtic_4.png" type="Texture" id=7]
[ext_resource path="res://assets/ForegroundMasks/celtic_1.png" type="Texture" id=8]
[ext_resource path="res://assets/ForegroundMasks/kakashi_1.png" type="Texture" id=9]
[ext_resource path="res://assets/ForegroundMasks/snowwhite.png" type="Texture" id=10]
[ext_resource path="res://assets/ForegroundMasks/unicorn.png" type="Texture" id=11]
[ext_resource path="res://scenes/Prototype_02/Prototype_02.gd" type="Script" id=12]
[ext_resource path="res://assets/ForegroundMasks/celtic_3.png" type="Texture" id=13]
[ext_resource path="res://assets/ForegroundMasks/sharingan_2.png" type="Texture" id=14]
[ext_resource path="res://assets/ForegroundMasks/circle.png" type="Texture" id=15]
[ext_resource path="res://assets/bg.png" type="Texture" id=16]
[ext_resource path="res://assets/ForegroundMasks/pokemon_4.png" type="Texture" id=17]
[ext_resource path="res://assets/ForegroundMasks/fish_2.png" type="Texture" id=18]
[ext_resource path="res://assets/ForegroundMasks/celtic_2.png" type="Texture" id=19]
[ext_resource path="res://assets/ForegroundMasks/sharingan_1.png" type="Texture" id=20]
[ext_resource path="res://assets/ForegroundMasks/heart_of_hearts.png" type="Texture" id=21]
[ext_resource path="res://assets/ForegroundMasks/fish_1.png" type="Texture" id=22]
[ext_resource path="res://assets/ForegroundMasks/kakashi_2.png" type="Texture" id=23]
[ext_resource path="res://assets/ForegroundMasks/star.jpg" type="Texture" id=24]
[ext_resource path="res://assets/Fonts/NotoSansUI_Regular.ttf" type="DynamicFontData" id=25]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 25 )

[sub_resource type="VisualShaderNodeColorOp" id=4]
operator = 3

[sub_resource type="VisualShaderNodeColorConstant" id=5]
constant = Color( 0.464844, 0.464844, 0.464844, 1 )

[sub_resource type="VisualShaderNodeVectorOp" id=6]
operator = 2

[sub_resource type="VisualShaderNodeColorUniform" id=7]
uniform_name = "BackgroundColor"

[sub_resource type="VisualShaderNodeTextureUniform" id=8]
uniform_name = "ForegroundMask"

[sub_resource type="VisualShaderNodeInput" id=9]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id=10]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 0.015, -0.015, 0 ) ]

[sub_resource type="VisualShaderNodeColorOp" id=11]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 1, 1, 1 ) ]
operator = 1

[sub_resource type="VisualShader" id=12]
code = "shader_type canvas_item;
uniform vec4 BackgroundColor : hint_color;
uniform sampler2D ForegroundMask;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = BackgroundColor.rgb;
	float n_out2p1 = BackgroundColor.a;

// Input:5
	vec3 n_out5p0 = vec3(UV, 0.0);

// VectorOp:6
	vec3 n_in6p1 = vec3(0.01500, -0.01500, 0.00000);
	vec3 n_out6p0 = n_out5p0 + n_in6p1;

// TextureUniform:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 n_tex_read = texture(ForegroundMask, n_out6p0.xy);
		n_out3p0 = n_tex_read.rgb;
		n_out3p1 = n_tex_read.a;
	}

// ColorOp:9
	vec3 n_in9p1 = vec3(1.00000, 1.00000, 1.00000);
	vec3 n_out9p0 = abs(n_out3p0 - n_in9p1);

// Color:11
	vec3 n_out11p0 = vec3(0.464844, 0.464844, 0.464844);
	float n_out11p1 = 1.000000;

// ColorOp:10
	vec3 n_out10p0 = max(n_out9p0, n_out11p0);

// VectorOp:12
	vec3 n_out12p0 = n_out2p0 * n_out10p0;

// Output:0
	COLOR.rgb = n_out12p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -657, 89 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 511, 174 )
nodes/fragment/2/node = SubResource( 7 )
nodes/fragment/2/position = Vector2( 100, 20 )
nodes/fragment/3/node = SubResource( 8 )
nodes/fragment/3/position = Vector2( -340, 120 )
nodes/fragment/5/node = SubResource( 9 )
nodes/fragment/5/position = Vector2( -720, 120 )
nodes/fragment/6/node = SubResource( 10 )
nodes/fragment/6/position = Vector2( -540, 120 )
nodes/fragment/9/node = SubResource( 11 )
nodes/fragment/9/position = Vector2( -120, 200 )
nodes/fragment/10/node = SubResource( 4 )
nodes/fragment/10/position = Vector2( 100, 200 )
nodes/fragment/11/node = SubResource( 5 )
nodes/fragment/11/position = Vector2( -80, 340 )
nodes/fragment/12/node = SubResource( 6 )
nodes/fragment/12/position = Vector2( 305.682, 148.088 )
nodes/fragment/connections = PoolIntArray( 5, 0, 6, 0, 6, 0, 3, 0, 2, 0, 12, 0, 10, 0, 12, 1, 3, 0, 9, 0, 9, 0, 10, 0, 11, 0, 10, 1, 12, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=13]
shader = SubResource( 12 )
shader_param/BackgroundColor = Color( 0.643137, 0.101961, 0.101961, 1 )
shader_param/ForegroundMask = ExtResource( 15 )

[sub_resource type="VisualShaderNodeColorOp" id=14]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 1, 1, 1 ) ]
operator = 2

[sub_resource type="VisualShaderNodeColorConstant" id=15]
constant = Color( 0.123047, 0.123047, 0.123047, 1 )

[sub_resource type="VisualShaderNodeVectorOp" id=16]

[sub_resource type="VisualShaderNodeTextureUniform" id=17]
uniform_name = "ForegroundMask"

[sub_resource type="VisualShaderNodeColorUniform" id=18]
uniform_name = "ForegroundColor"

[sub_resource type="VisualShaderNodeTexture" id=19]
source = 5

[sub_resource type="VisualShaderNodeInput" id=20]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id=21]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 0.001, -0.001, 0 ) ]

[sub_resource type="VisualShaderNodeColorOp" id=22]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 1, 1, 1 ) ]
operator = 1

[sub_resource type="VisualShader" id=23]
code = "shader_type canvas_item;
uniform vec4 ForegroundColor : hint_color;
uniform sampler2D ForegroundMask;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:5
	vec3 n_out5p0 = ForegroundColor.rgb;
	float n_out5p1 = ForegroundColor.a;

// Input:7
	vec3 n_out7p0 = vec3(UV, 0.0);

// VectorOp:8
	vec3 n_in8p1 = vec3(0.00100, -0.00100, 0.00000);
	vec3 n_out8p0 = n_out7p0 + n_in8p1;

// TextureUniform:4
	vec3 n_out4p0;
	float n_out4p1;
	{
		vec4 n_tex_read = texture(ForegroundMask, UV.xy);
		n_out4p0 = n_tex_read.rgb;
		n_out4p1 = n_tex_read.a;
	}

// Texture:6
	vec3 n_out6p0;
	float n_out6p1;
	{
		vec4 ForegroundMask_tex_read = texture(ForegroundMask, n_out8p0.xy);
		n_out6p0 = ForegroundMask_tex_read.rgb;
		n_out6p1 = ForegroundMask_tex_read.a;
	}

// ColorOp:9
	vec3 n_in9p1 = vec3(1.00000, 1.00000, 1.00000);
	vec3 n_out9p0 = abs(n_out6p0 - n_in9p1);

// Color:11
	vec3 n_out11p0 = vec3(0.123047, 0.123047, 0.123047);
	float n_out11p1 = 1.000000;

// ColorOp:10
	vec3 n_out10p0 = min(n_out9p0, n_out11p0);

// VectorOp:12
	vec3 n_out12p0 = n_out5p0 + n_out10p0;

// Output:0
	COLOR.rgb = n_out12p0;
	COLOR.a = dot(n_out4p0, vec3(0.333333, 0.333333, 0.333333));

}

void light() {
// Output:0

}
"
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 800, 220 )
nodes/fragment/4/node = SubResource( 17 )
nodes/fragment/4/position = Vector2( -260, 0 )
nodes/fragment/5/node = SubResource( 18 )
nodes/fragment/5/position = Vector2( 380, 40 )
nodes/fragment/6/node = SubResource( 19 )
nodes/fragment/6/position = Vector2( -40, 220 )
nodes/fragment/7/node = SubResource( 20 )
nodes/fragment/7/position = Vector2( -440, 220 )
nodes/fragment/8/node = SubResource( 21 )
nodes/fragment/8/position = Vector2( -260, 220 )
nodes/fragment/9/node = SubResource( 22 )
nodes/fragment/9/position = Vector2( 160, 220 )
nodes/fragment/10/node = SubResource( 14 )
nodes/fragment/10/position = Vector2( 380, 220 )
nodes/fragment/11/node = SubResource( 15 )
nodes/fragment/11/position = Vector2( 200, 380 )
nodes/fragment/12/node = SubResource( 16 )
nodes/fragment/12/position = Vector2( 600, 100 )
nodes/fragment/connections = PoolIntArray( 4, 0, 0, 1, 4, 2, 6, 2, 7, 0, 8, 0, 8, 0, 6, 0, 11, 0, 10, 1, 10, 0, 12, 1, 5, 0, 12, 0, 6, 0, 9, 0, 9, 0, 10, 0, 12, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=24]
shader = SubResource( 23 )
shader_param/ForegroundColor = Color( 0.243137, 0.623529, 0.0784314, 1 )
shader_param/ForegroundMask = ExtResource( 15 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 300, 295 )

[sub_resource type="DynamicFont" id=26]
size = 24
font_data = ExtResource( 25 )

[node name="Prototype_02" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
bg2fg_relation = 1.5
speed_factor = 7.0

[node name="ScoreBoard" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -760.0
margin_bottom = -680.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="Panel" parent="ScoreBoard"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScoreBoard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.3658
margin_bottom = -2.63421
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ScoreBoard"]
anchor_right = 1.0
margin_top = 9.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "SCORE"
align = 1
valign = 1

[node name="Layers" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Layers"]
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Foreground" type="TextureRect" parent="Layers"]
material = SubResource( 24 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TouchScreenButton" parent="Layers"]
shape = SubResource( 25 )

[node name="MaskSelector" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border" type="Panel" parent="MaskSelector"]
anchor_right = 1.0
margin_bottom = 2.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="MaskSelector"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -26.0
margin_right = 199.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 26 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 15 )

[node name="hexagon" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 4 )

[node name="star" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 24 )

[node name="celtic_1" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 8 )

[node name="celtic_2" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 19 )

[node name="celtic_3" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 13 )

[node name="celtic_4" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 7 )

[node name="celtic_5" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 3 )

[node name="heart_of_hearts" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 21 )

[node name="sharingan_1" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 20 )

[node name="sharingan_2" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 14 )

[node name="fish_1" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 22 )

[node name="fish_2" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 18 )

[node name="unicorn" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 11 )

[node name="pokemon_1" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 5 )

[node name="pokemon_2" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 1 )

[node name="pokemon_3" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 2 )

[node name="pokemon_4" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 17 )

[node name="snowwhite" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 10 )

[node name="unbrellacouple" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 6 )

[node name="kakashi_1" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 9 )

[node name="kakashi_2" type="Sprite" parent="MaskSelector/OptionButton"]
visible = false
position = Vector2( 987.023, -228.124 )
texture = ExtResource( 23 )

[node name="ButtonLeft" type="Button" parent="MaskSelector"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -20.0
margin_right = -210.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 26 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="MaskSelector"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 210.0
margin_top = -20.0
margin_right = 250.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 26 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="released" from="Layers/Button" to="." method="_on_Layers_Button_released"]
[connection signal="item_selected" from="MaskSelector/OptionButton" to="." method="_on_MaskMenu_item_selected"]
[connection signal="pressed" from="MaskSelector/ButtonLeft" to="." method="_on_MaskMenu_ButtonLeft_pressed"]
[connection signal="pressed" from="MaskSelector/ButtonRight" to="." method="_on_MaskMenu_ButtonRicht_pressed"]
